# ChangeLog for Portage; the Gentoo Linux ports system 
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2

  21 Jul 2002; Phil Bordelon <sunflare@gentoo.org> emerge: Readded the sync
  help to the list of help options now that emerge --help sync works again.

*portage-2.0.15 (16 Jul 2002)

  15 Jul 2002; Daniel Robbins <drobbins@gentoo.org> emake: no longer falls back
  to plain old "make" if parallel make fails.  I believe it's best to fix the
  problem (turn parallel make off in the ebuild) rather than tweak emake to
  avoid it.
  
  15 Jul 2002; Daniel Robbins <drobbins@gentoo.org> emerge: rewrote some code,
  cleaning things up and removing redundant functions.  Starting to
  de-cruftify.

  15 Jul 2002; Daniel Robbins <drobbins@gentoo.org> emerge: fix for permissions
  when updating the cache using server-generated entries.

*portage-2.0.14 (15 Jul 2002)
  
  15 Jul 2002; Daniel Robbins <drobbins@gentoo.org> ebuild.sh: ccache bug fix;
  removed extra "!".  Ccache should now get enabled properly.  Also, INHERITED
  variable is now getting added to the dep cache entries for future
  eclass-friendly caching.
  
  15 Jul 2002: Daniel Robbins <drobbins@gentoo.org> portage.py: Portage now
  *persistently* caches xmatch() calculations.  This appears to speed things up
  but we will need to limit the size of the new xcache.p in future versions of
  Portage.

  15 Jul 2002; Daniel Robbins <drobbins@gentoo.org> portage.py, emerge: Portage
  now has keyword-based masking enabled.  It also has server-side caching
  enabled to eliminate "emerge pre-Calculating dependencies... delay" for
  end-users.  There is now an undocumented "regen" option for emerge that tells
  Portage to ensure that all entries in /var/cache/edb/dep are up-to-date.
  This is intended mainly for developers, as the server-side caching feature
  should ensure that all dep cache entries are up-to-date for end-users.
