@@ -1,6 +1,14 @@
 # ChangeLog for Portage; the Gentoo Linux ports system 
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
 
+  22 Jul 2002; Nicholas Jones <carpaski@gentoo.org> portage.py: added the
+  xcache.p fix and updated the version to 2.0.16pre (from 2.0.12) -- Also
+	added in a try/except inside the store() (atexit) for xcache.p to give
+	hints instead of tracebacks.
+
+  22 Jul 2002; Nicholas Jones <carpaski@gentoo.org> emerge: added the
+  description searching code and added a spinner to the search.
+
   21 Jul 2002; Phil Bordelon <sunflare@gentoo.org> emerge: Readded the sync
   help to the list of help options now that emerge --help sync works again.
 
